<?xml version="1.0"?>
<package format="2">
  <name>ament_build_type_gradle</name>
  <version>0.0.0</version>
  <description>Gradle tool support for ament.</description>
  <maintainer email="esteve@apache.org">Esteve Fernandez</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_tools</buildtool_depend>

  <buildtool_export_depend>ament_tools</buildtool_export_depend>

  <build_depend>ament_java_resources</build_depend>
  <exec_depend>ament_java_resources</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
